<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="popularMoviesApp">Popular Movies</string>
    <string name="labelTitle">My Nanodegree Apps!</string>
    <string name="scoresApp">Scores App</string>
    <string name="libraryApp">Library App</string>
    <string name="buildBiggerApp">Build it Bigger</string>
    <string name="readerApp">XYZ Reader</string>
    <string name="capstoneApp">Capstone</string>
</resources>
