<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical" tools:context=".MainActivity"
    android:gravity="center"
    android:background="#CFD8DC">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/labelTitle"
        android:id="@+id/textView"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/popularMoviesApp"
        android:id="@+id/moviesAppButton"
        android:onClick="onClick"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/scoresApp"
        android:onClick="onClick"
        android:id="@+id/scoresAppButton"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/libraryApp"
        android:onClick="onClick"
        android:id="@+id/libraryAppButton"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buildBiggerApp"
        android:onClick="onClick"
        android:id="@+id/buildAppButton"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/readerApp"
        android:onClick="onClick"
        android:id="@+id/readerAppButton"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstoneApp"
        android:onClick="onClick"
        android:id="@+id/capstoneAppButton"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35" />
</LinearLayout>
